ffmpeg: Fix initial dts for streamcopy, if the input packets lack dts.

Fixes Ticket1138

Based on a patch by: Eelco Lempsink <eml@tupil.com>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>